--- a/index.html
+++ b/index.html
@@ -99,17 +99,26 @@
         background: #002562;
       }
 
-      #ekibenBios {
+      #ekibenBios, #ekibenIngredients {
         position: absolute;
-        left: -150px;
         top: 100px;
         width: 400px;
         pointer-events: none;
-
-        text-align: right;
       }
-      #ekibenBios div {
+      #ekibenBios {
+        text-align: right;
+        left: -150px;
+      }
+      #ekibenIngredients {
+        text-align: left;
+        right: -150px;
+      }
+      #ekibenBios div, #ekibenIngredients div {
         pointer-events: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
       }
       #ekibenBios h2 {
         position: relative;
@@ -137,9 +146,8 @@
         left: -600px;
         opacity: 0;
       }
-      #ekibenBios p {
+      #ekibenBios p, #ekibenIngredients p {
         position: relative;
-        left: 0px;
         pointer-events: all;
 
         font-size: 16px;
@@ -149,13 +157,24 @@
         padding: 16px;
         margin:  0;
         border: 4px solid #fbf236;
-        border-top-left-radius: 16px;
         box-shadow: inset 0px 0px 4px 2px #faae37;
 
-        transition: left 0.5s ease-out 0.15s, opacity 0.5s ease-out 0.15s;
+        transition: left 0.5s ease-out 0.15s, right 0.5s ease-out, opacity 0.5s ease-out 0.15s;
+      }
+      #ekibenBios p {
+        left: 0px;
+        border-top-left-radius: 16px;
+      }
+      #ekibenIngredients p {
+        right: 0px;
+        border-top-right-radius: 16px;
       }
       #ekibenBios div.docked p {
         left: -600px;
+        opacity: 0;
+      }
+      #ekibenIngredients div.docked p {
+        right: -600px;
         opacity: 0;
       }
 
@@ -214,6 +233,15 @@
               famous throughout Japan.
               <br/><br/>
               <a href="https://japanrailandtravel.com/interests/food-shopping/ekiben/gyuniku-domannaka/" target="_blank">source</a>
+        </div>
+      </div>
+      <div id="ekibenIngredients">
+        <div id="beefDomannakaBeefBio" class="docked">
+          <p>Minced and sauteed beef over rice.</p>
+        </div>
+        <div id="beefDomannakaSidesBio" class="docked">
+          <p>Assortment of small sides, including nori, fish cake, egg omelet,
+             and pickled ginger.</p>
         </div>
       </div>
     </div>
