--- a/index.html
+++ b/index.html
@@ -213,17 +213,52 @@
       <img id="beefDomannakaSides" src="img/beef-domannaka-sides.png" width=337 height=360 onload="imgload()" />
       <img id="beefDomannakaSidesMask" src="img/beef-domannaka-sides-mask.png" width=337 height=360 onload="imgload()" />
 
-      <img id="makunouchi" src="img/makunouchi.png" width=303 height=360 onload="imgload()" />
-      <img id="makunouchiCover" src="img/makunouchi-cover.png" width=303 height=360 onload="imgload()" />
-      <img id="makunouchiRice" src="img/makunouchi-rice.png" width=303 height=360 onload="imgload()" />
-      <img id="makunouchiRiceMask" src="img/makunouchi-rice-mask.png" width=303 height=360 onload="imgload()" />
-      <img id="makunouchiSides" src="img/makunouchi-sides.png" width=303 height=360 onload="imgload()" />
-      <img id="makunouchiSidesMask" src="img/makunouchi-sides-mask.png" width=303 height=360 onload="imgload()" />
+      <img id="makunouchi" src="img/makunouchi.png" width=309 height=213 onload="imgload()" />
+      <img id="makunouchiCover" src="img/makunouchi-cover.png" width=309 height=213 onload="imgload()" />
+      <img id="makunouchiRice" src="img/makunouchi-rice.png" width=309 height=213 onload="imgload()" />
+      <img id="makunouchiRiceMask" src="img/makunouchi-rice-mask.png" width=309 height=213 onload="imgload()" />
+      <img id="makunouchiSides" src="img/makunouchi-sides.png" width=309 height=213 onload="imgload()" />
+      <img id="makunouchiSidesMask" src="img/makunouchi-sides-mask.png" width=309 height=213 onload="imgload()" />
 
       <img id="hippari" src="img/hippari.png" width=300 height=372 onload="imgload()" />
       <img id="hippariCover" src="img/hippari-cover.png" width=300 height=372 onload="imgload()" />
       <img id="hippariOcto" src="img/hippari-octo.png" width=300 height=372 onload="imgload()" />
       <img id="hippariOctoMask" src="img/hippari-octo-mask.png" width=300 height=372 onload="imgload()" />
+
+      <img id="hinaijidori" src="img/hinaijidori.png" width=303 height=360 onload="imgload()" />
+      <img id="hinaijidoriCover" src="img/hinaijidori-cover.png" width=303 height=360 onload="imgload()" />
+      <img id="hinaijidoriChicken" src="img/hinaijidori-chicken.png" width=303 height=360 onload="imgload()" />
+      <img id="hinaijidoriChickenMask" src="img/hinaijidori-chicken-mask.png" width=303 height=360 onload="imgload()" />
+      <img id="hinaijidoriSides" src="img/hinaijidori-sides.png" width=303 height=360 onload="imgload()" />
+      <img id="hinaijidoriSidesMask" src="img/hinaijidori-sides-mask.png" width=303 height=360 onload="imgload()" />
+
+      <img id="ikameshi" src="img/ikameshi.png" width=331 height=322 onload="imgload()" />
+      <img id="ikameshiCover" src="img/ikameshi-cover.png" width=331 height=322 onload="imgload()" />
+      <img id="ikameshiSquid" src="img/ikameshi-squid.png" width=331 height=322 onload="imgload()" />
+      <img id="ikameshiSquidMask" src="img/ikameshi-squid-mask.png" width=331 height=322 onload="imgload()" />
+
+      <img id="kamameshi" src="img/kamameshi.png" width=401 height=306 onload="imgload()" />
+      <img id="kamameshiCover" src="img/kamameshi-cover.png" width=401 height=306 onload="imgload()" />
+      <img id="kamameshiFood" src="img/kamameshi-food.png" width=401 height=306 onload="imgload()" />
+      <img id="kamameshiFoodMask" src="img/kamameshi-food-mask.png" width=401 height=306 onload="imgload()" />
+
+      <img id="chirashi" src="img/chirashi.png" width=321 height=354 onload="imgload()" />
+      <img id="chirashiCover" src="img/chirashi-cover.png" width=321 height=354 onload="imgload()" />
+      <img id="chirashiTamago" src="img/chirashi-tamago.png" width=321 height=354 onload="imgload()" />
+      <img id="chirashiTamagoMask" src="img/chirashi-tamago-mask.png" width=321 height=354 onload="imgload()" />
+      <img id="chirashiFish" src="img/chirashi-fish.png" width=321 height=354 onload="imgload()" />
+      <img id="chirashiFishMask" src="img/chirashi-fish-mask.png" width=321 height=354 onload="imgload()" />
+
+      <img id="omotenashi" src="img/omotenashi.png" width=321 height=354 onload="imgload()" />
+      <img id="omotenashiCover" src="img/omotenashi-cover.png" width=321 height=354 onload="imgload()" />
+      <img id="omotenashiOnigiri" src="img/omotenashi-onigiri.png" width=321 height=354 onload="imgload()" />
+      <img id="omotenashiOnigiriMask" src="img/omotenashi-onigiri-mask.png" width=321 height=354 onload="imgload()" />
+      <img id="omotenashiTamago" src="img/omotenashi-tamago.png" width=321 height=354 onload="imgload()" />
+      <img id="omotenashiTamagoMask" src="img/omotenashi-tamago-mask.png" width=321 height=354 onload="imgload()" />
+      <img id="omotenashiTempura" src="img/omotenashi-tempura.png" width=321 height=354 onload="imgload()" />
+      <img id="omotenashiTempuraMask" src="img/omotenashi-tempura-mask.png" width=321 height=354 onload="imgload()" />
+      <img id="omotenashiSides" src="img/omotenashi-sides.png" width=321 height=354 onload="imgload()" />
+      <img id="omotenashiSidesMask" src="img/omotenashi-sides-mask.png" width=321 height=354 onload="imgload()" />
     </div>
     <div id="canvasWrapper">
       <canvas id="canvas" width=960 height=640></canvas>
@@ -279,6 +314,73 @@
               <br/><br/>
               <a href="https://grapeejapan.com/191895" target="_blank">source</a>
         </div>
+        <div id="hinaijidoriBio" class="docked">
+          <h2>Hinai Jidori Bento</h2>
+          <p> Available at Odate Station for 1,200 yen.
+              <br/><br/>
+              This bento features Hinai Jidori chicken &mdash;
+              the most famous chicken in Japan and known for its strong flavor. 
+              <br/><br/>
+              These chickens are raised primarily in the northern areas of Akita
+              prefecture and are raised very comfortably, similar to Wagyu beef
+              cows.
+              <br/><br/>
+              <a href="https://japanshopping.org/search/events/detail/%E9%A7%85%E5%BC%81%E5%91%B3%E3%81%AE%E9%99%A3-%E3%81%AE%E6%AD%B4%E4%BB%A3%E3%82%B0%E3%83%A9%E3%83%B3%E3%83%97%E3%83%AA%E3%82%92%E5%91%B3%E3%82%8F%E3%81%84%E5%B0%BD%E3%81%8F%E3%81%9D%E3%81%86" target="_blank">source</a>
+        </div>
+        <div id="ikameshiBio" class="docked">
+          <h2>Ikameshi</h2>
+          <p> Available at Mori Station for 880 yen.
+              <br/><br/>
+              This ekiben contains two small squids that are stuffed with a mixture of
+              glutinous and non-glutinous rice that provides a unique chewiness.
+              The sweet and salty sauce that the squid is cooked with seeps into
+              the rice on the inside, giving it a full flavor.
+              <br/><br/>
+              Ikameshi was first created in 1941, making it one of the older
+              ekiben still available. It is still very popular today and its
+              especially desired at ekiben festivals since Mori's location in
+              Hokkaido is fairly far from the rest of Japan.
+              <br/><br/>
+              <a href="https://japanshopping.org/search/events/detail/%E5%91%8A%E7%9F%A5-%E4%BA%AC%E7%8E%8B%E7%99%BE%E8%B2%A8%E5%BA%97%E3%81%AE%E9%A7%85%E5%BC%81%E5%A4%A7%E4%BC%9A-%E7%B5%B6%E5%AF%BE%E9%A3%9F%E3%81%B9%E3%81%A6%E3%81%BB%E3%81%97%E3%81%84%E9%A7%85%E5%BC%81" target="_blank">source1</a>
+              <a href="https://japanrailandtravel.com/interests/food-shopping/ekiben/ikameshi/" target="_blank">source2</a>
+        </div>
+        <div id="kamameshiBio" class="docked">
+          <h2>Toge no Kamameshi</h2>
+          <p> Available at Yokokawa Station for 1,300 yen.
+              <br/><br/>
+              This ekiben features nine colorful ingredients nestled inside a
+              Mashiko earthenware pot. For over sixty years this has been one of
+              Japan's favorite ekiben.
+              <br/><br/>
+              The rice used in this dish is called <i>chameshi</i> or "tea rice"
+              as the rice is cooked in strongly steeped tea. It is often mixed
+              with dried soybeans.
+              <br/><br/>
+              <a href="https://www.oginoya.co.jp/en/bento/kamameshi/" target="_blank">source</a>
+        </div>
+        <div id="chirashiBio" class="docked">
+          <h2>Ebi Senryo Chirashi</h2>
+          <p> Available at Niigata Station for 1,380 yen.
+              <br/><br/>
+              This ekiben contains four types of seafood over vinegar-seasoned rice,
+              prominently topped with a large and sweet <i>tamagoyaki</i> &mdash; a
+              Japanese rolled omelet.
+              <br/><br/>
+              <a href="https://japanshopping.org/search/events/detail/%E5%91%8A%E7%9F%A5-%E4%BA%AC%E7%8E%8B%E7%99%BE%E8%B2%A8%E5%BA%97%E3%81%AE%E9%A7%85%E5%BC%81%E5%A4%A7%E4%BC%9A-%E7%B5%B6%E5%AF%BE%E9%A3%9F%E3%81%B9%E3%81%A6%E3%81%BB%E3%81%97%E3%81%84%E9%A7%85%E5%BC%81" target="_blank">source</a>
+        </div>
+        <div id="omotenashiBio" class="docked">
+          <h2>Okami no Omotenashi</h2>
+          <p> Available at JR East Stations in Miyagi Prefecture for 1,300 yen.
+              <br/><br/>
+              This ekiben features shrimp tempura, a trio of onigiri, and an
+              assortment of other classic Japanese flavors.
+              <br/><br/>
+              The bento is presented in a bamboo basket which is meant to evoke
+              the hospitality of famous Naruko Onsen &mdash; a Japanese hot
+              springs resort found in the north-western area of Miyagi.
+              <br/><br/>
+              <a href="https://www.japan-experience.com/plan-your-trip/to-know/japanese-food/the-top-3-ekiben-in-jr-east" target="_blank">source</a>
+        </div>
       </div>
 
       <div id="ekibenIngredients">
@@ -304,6 +406,46 @@
 
         <div id="hippariOctoBio" class="docked"><p>
           Octopus (tako), conger eel (unagi), and seasonal vegetables.
+        </p></div>
+
+        <div id="hinaijidoriChickenBio" class="docked"><p>
+          Hinai Jidori chicken cooked in 2 ways: "salt-grilled" and "flavored
+          ground chicken" served on top of rice and scrambled eggs.
+        </p></div>
+        <div id="hinaijidoriSidesBio" class="docked"><p>
+          An assortment of pickled side dishes.
+        </p></div>
+
+        <div id="ikameshiSquidBio" class="docked"><p>
+          Squid stuffed with chewy rice and cooked with a sweet and salty sauce.
+        </p></div>
+
+        <div id="kamameshiFoodBio" class="docked"><p>
+          Chameshi (Koshihikari rice), chicken, burdock root, shiitake mushroom,
+          bamboo shoot, quail egg, chestnut, apricot, green peas and red ginger.
+        </p></div>
+
+        <div id="chirashiTamagoBio" class="docked"><p>
+          Large rolled omelete (tamagoyaki) topped with minced shrimp.
+        </p></div>
+        <div id="chirashiFishBio" class="docked"><p>
+          From the top-left in clockwise order: squid, shrimp, eel (unagi), and
+          gizzard shad (kohada). This is all served over vinegar-seasoned rice
+          with a small side of pickled ginger.
+        </p></div>
+
+        <div id="omotenashiOnigiriBio" class="docked"><p>
+          A trio of onigiri &mdash; stuffed rice balls &mdash; that each have
+          different fillings and different rice.
+        </p></div>
+        <div id="omotenashiTamagoBio" class="docked"><p>
+          Chestnut, omelete (tamago), and seaweed (nori).
+        </p></div>
+        <div id="omotenashiTempuraBio" class="docked"><p>
+          Breaded and fried shrimp (shrimp tempura) along with a few other fried foods.
+        </p></div>
+        <div id="omotenashiSidesBio" class="docked"><p>
+          An assortment of steamed and pickled vegetables.
         </p></div>
       </div>
     </div>
