--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
               one of the barrel-shaped octopus traps traditionally used in
               Japan.
               <br/><br/>
-              The name <i>hipparidako-meshi</i> is an expression, literally 
+              The name <i>hipparidako</i> is an expression, literally 
               meaning "pulled octopus", which is used to refer to someone who is
               so popular that they continually receive invitations and offers
               like an octopus beingd pulled in different directions.
