--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         visibility: visible !important;
       }
 
+      span, p, h2 {
+        user-select: none;
+      }
+
       #canvasWrapper {
         display: inline-block;
         position: relative;
@@ -89,7 +93,7 @@
         box-shadow: inset 0px 0px 4px 2px #faae37;
 
         opacity: 1;
-        visibility: visibile;
+        visibility: visible;
         transition: opacity 1s, visibility 0s;
       }
       #backButton.hidden span {
@@ -183,7 +187,7 @@
         font-family: verdana;
         color: white;
       }
-      
+
       a:link {
         color: #fbf236;
       }
@@ -307,7 +311,7 @@
               one of the barrel-shaped octopus traps traditionally used in
               Japan.
               <br/><br/>
-              The name <i>hipparidako</i> is an expression, literally 
+              The name <i>hipparidako</i> is an expression, literally
               meaning "pulled octopus", which is used to refer to someone who is
               so popular that they continually receive invitations and offers
               like an octopus beingd pulled in different directions.
@@ -319,7 +323,7 @@
           <p> Available at Odate Station for 1,200 yen.
               <br/><br/>
               This bento features Hinai Jidori chicken &mdash;
-              the most famous chicken in Japan and known for its strong flavor. 
+              the most famous chicken in Japan and known for its strong flavor.
               <br/><br/>
               These chickens are raised primarily in the northern areas of Akita
               prefecture and are raised very comfortably, similar to Wagyu beef
@@ -384,6 +388,10 @@
       </div>
 
       <div id="ekibenIngredients">
+        <div id="pullTheLid" class="docked"><p style="font-size: 20px">
+          Pull the lid off to see what's inside!
+        </p></div>
+
         <div id="beefDomannakaBeefBio" class="docked"><p>
           Minced and sauteed beef over rice.
         </p></div>
