--- a/index.html
+++ b/index.html
@@ -219,65 +219,65 @@
   </head>
   <body>
     <div id="images" style="display:none;">
-      <img id="japan" src="img/japan.png" width=600 height=541 onload="imgload()" />
-      <img id="shin" src="img/shin.png" width=960 height=539 onload="imgload()" />
+      <img id="japan" src="img/japan.png" width=600 height=541 onload="imgload()" decoding="async" />
+      <img id="shin" src="img/shin.png" width=960 height=539 onload="imgload()" decoding="async" />
 
-      <img id="cityNormal" src="img/city-normal.png" width=16 height=16 onload="imgload()" />
-      <img id="cityHover" src="img/city-hover.png" width=16 height=16 onload="imgload()" />
+      <img id="cityNormal" src="img/city-normal.png" width=16 height=16 onload="imgload()" decoding="async" />
+      <img id="cityHover" src="img/city-hover.png" width=16 height=16 onload="imgload()" decoding="async" />
 
-      <img id="beefDomannaka" src="img/beef-domannaka.png" width=337 height=360 onload="imgload()" />
-      <img id="beefDomannakaCover" src="img/beef-domannaka-cover.png" width=337 height=360 onload="imgload()" />
-      <img id="beefDomannakaBeef" src="img/beef-domannaka-beef.png" width=337 height=360 onload="imgload()" />
-      <img id="beefDomannakaBeefMask" src="img/beef-domannaka-beef-mask.png" width=337 height=360 onload="imgload()" />
-      <img id="beefDomannakaSides" src="img/beef-domannaka-sides.png" width=337 height=360 onload="imgload()" />
-      <img id="beefDomannakaSidesMask" src="img/beef-domannaka-sides-mask.png" width=337 height=360 onload="imgload()" />
+      <img id="beefDomannaka" src="img/beef-domannaka.png" width=337 height=360 onload="imgload()" decoding="async" />
+      <img id="beefDomannakaCover" src="img/beef-domannaka-cover.png" width=337 height=360 onload="imgload()" decoding="async" />
+      <img id="beefDomannakaBeef" src="img/beef-domannaka-beef.png" width=337 height=360 onload="imgload()" decoding="async" />
+      <img id="beefDomannakaBeefMask" src="img/beef-domannaka-beef-mask.png" width=337 height=360 onload="imgload()" decoding="async" />
+      <img id="beefDomannakaSides" src="img/beef-domannaka-sides.png" width=337 height=360 onload="imgload()" decoding="async" />
+      <img id="beefDomannakaSidesMask" src="img/beef-domannaka-sides-mask.png" width=337 height=360 onload="imgload()" decoding="async" />
 
-      <img id="makunouchi" src="img/makunouchi.png" width=309 height=213 onload="imgload()" />
-      <img id="makunouchiCover" src="img/makunouchi-cover.png" width=309 height=213 onload="imgload()" />
-      <img id="makunouchiRice" src="img/makunouchi-rice.png" width=309 height=213 onload="imgload()" />
-      <img id="makunouchiRiceMask" src="img/makunouchi-rice-mask.png" width=309 height=213 onload="imgload()" />
-      <img id="makunouchiSides" src="img/makunouchi-sides.png" width=309 height=213 onload="imgload()" />
-      <img id="makunouchiSidesMask" src="img/makunouchi-sides-mask.png" width=309 height=213 onload="imgload()" />
+      <img id="makunouchi" src="img/makunouchi.png" width=309 height=213 onload="imgload()" decoding="async" />
+      <img id="makunouchiCover" src="img/makunouchi-cover.png" width=309 height=213 onload="imgload()" decoding="async" />
+      <img id="makunouchiRice" src="img/makunouchi-rice.png" width=309 height=213 onload="imgload()" decoding="async" />
+      <img id="makunouchiRiceMask" src="img/makunouchi-rice-mask.png" width=309 height=213 onload="imgload()" decoding="async" />
+      <img id="makunouchiSides" src="img/makunouchi-sides.png" width=309 height=213 onload="imgload()" decoding="async" />
+      <img id="makunouchiSidesMask" src="img/makunouchi-sides-mask.png" width=309 height=213 onload="imgload()" decoding="async" />
 
-      <img id="hippari" src="img/hippari.png" width=300 height=372 onload="imgload()" />
-      <img id="hippariCover" src="img/hippari-cover.png" width=300 height=372 onload="imgload()" />
-      <img id="hippariOcto" src="img/hippari-octo.png" width=300 height=372 onload="imgload()" />
-      <img id="hippariOctoMask" src="img/hippari-octo-mask.png" width=300 height=372 onload="imgload()" />
+      <img id="hippari" src="img/hippari.png" width=300 height=372 onload="imgload()" decoding="async" />
+      <img id="hippariCover" src="img/hippari-cover.png" width=300 height=372 onload="imgload()" decoding="async" />
+      <img id="hippariOcto" src="img/hippari-octo.png" width=300 height=372 onload="imgload()" decoding="async" />
+      <img id="hippariOctoMask" src="img/hippari-octo-mask.png" width=300 height=372 onload="imgload()" decoding="async" />
 
-      <img id="hinaijidori" src="img/hinaijidori.png" width=303 height=360 onload="imgload()" />
-      <img id="hinaijidoriCover" src="img/hinaijidori-cover.png" width=303 height=360 onload="imgload()" />
-      <img id="hinaijidoriChicken" src="img/hinaijidori-chicken.png" width=303 height=360 onload="imgload()" />
-      <img id="hinaijidoriChickenMask" src="img/hinaijidori-chicken-mask.png" width=303 height=360 onload="imgload()" />
-      <img id="hinaijidoriSides" src="img/hinaijidori-sides.png" width=303 height=360 onload="imgload()" />
-      <img id="hinaijidoriSidesMask" src="img/hinaijidori-sides-mask.png" width=303 height=360 onload="imgload()" />
+      <img id="hinaijidori" src="img/hinaijidori.png" width=303 height=360 onload="imgload()" decoding="async" />
+      <img id="hinaijidoriCover" src="img/hinaijidori-cover.png" width=303 height=360 onload="imgload()" decoding="async" />
+      <img id="hinaijidoriChicken" src="img/hinaijidori-chicken.png" width=303 height=360 onload="imgload()" decoding="async" />
+      <img id="hinaijidoriChickenMask" src="img/hinaijidori-chicken-mask.png" width=303 height=360 onload="imgload()" decoding="async" />
+      <img id="hinaijidoriSides" src="img/hinaijidori-sides.png" width=303 height=360 onload="imgload()" decoding="async" />
+      <img id="hinaijidoriSidesMask" src="img/hinaijidori-sides-mask.png" width=303 height=360 onload="imgload()" decoding="async" />
 
-      <img id="ikameshi" src="img/ikameshi.png" width=331 height=322 onload="imgload()" />
-      <img id="ikameshiCover" src="img/ikameshi-cover.png" width=331 height=322 onload="imgload()" />
-      <img id="ikameshiSquid" src="img/ikameshi-squid.png" width=331 height=322 onload="imgload()" />
-      <img id="ikameshiSquidMask" src="img/ikameshi-squid-mask.png" width=331 height=322 onload="imgload()" />
+      <img id="ikameshi" src="img/ikameshi.png" width=331 height=322 onload="imgload()" decoding="async" />
+      <img id="ikameshiCover" src="img/ikameshi-cover.png" width=331 height=322 onload="imgload()" decoding="async" />
+      <img id="ikameshiSquid" src="img/ikameshi-squid.png" width=331 height=322 onload="imgload()" decoding="async" />
+      <img id="ikameshiSquidMask" src="img/ikameshi-squid-mask.png" width=331 height=322 onload="imgload()" decoding="async" />
 
-      <img id="kamameshi" src="img/kamameshi.png" width=401 height=306 onload="imgload()" />
-      <img id="kamameshiCover" src="img/kamameshi-cover.png" width=401 height=306 onload="imgload()" />
-      <img id="kamameshiFood" src="img/kamameshi-food.png" width=401 height=306 onload="imgload()" />
-      <img id="kamameshiFoodMask" src="img/kamameshi-food-mask.png" width=401 height=306 onload="imgload()" />
+      <img id="kamameshi" src="img/kamameshi.png" width=401 height=306 onload="imgload()" decoding="async" />
+      <img id="kamameshiCover" src="img/kamameshi-cover.png" width=401 height=306 onload="imgload()" decoding="async" />
+      <img id="kamameshiFood" src="img/kamameshi-food.png" width=401 height=306 onload="imgload()" decoding="async" />
+      <img id="kamameshiFoodMask" src="img/kamameshi-food-mask.png" width=401 height=306 onload="imgload()" decoding="async" />
 
-      <img id="chirashi" src="img/chirashi.png" width=321 height=354 onload="imgload()" />
-      <img id="chirashiCover" src="img/chirashi-cover.png" width=321 height=354 onload="imgload()" />
-      <img id="chirashiTamago" src="img/chirashi-tamago.png" width=321 height=354 onload="imgload()" />
-      <img id="chirashiTamagoMask" src="img/chirashi-tamago-mask.png" width=321 height=354 onload="imgload()" />
-      <img id="chirashiFish" src="img/chirashi-fish.png" width=321 height=354 onload="imgload()" />
-      <img id="chirashiFishMask" src="img/chirashi-fish-mask.png" width=321 height=354 onload="imgload()" />
+      <img id="chirashi" src="img/chirashi.png" width=321 height=354 onload="imgload()" decoding="async" />
+      <img id="chirashiCover" src="img/chirashi-cover.png" width=321 height=354 onload="imgload()" decoding="async" />
+      <img id="chirashiTamago" src="img/chirashi-tamago.png" width=321 height=354 onload="imgload()" decoding="async" />
+      <img id="chirashiTamagoMask" src="img/chirashi-tamago-mask.png" width=321 height=354 onload="imgload()" decoding="async" />
+      <img id="chirashiFish" src="img/chirashi-fish.png" width=321 height=354 onload="imgload()" decoding="async" />
+      <img id="chirashiFishMask" src="img/chirashi-fish-mask.png" width=321 height=354 onload="imgload()" decoding="async" />
 
-      <img id="omotenashi" src="img/omotenashi.png" width=321 height=354 onload="imgload()" />
-      <img id="omotenashiCover" src="img/omotenashi-cover.png" width=321 height=354 onload="imgload()" />
-      <img id="omotenashiOnigiri" src="img/omotenashi-onigiri.png" width=321 height=354 onload="imgload()" />
-      <img id="omotenashiOnigiriMask" src="img/omotenashi-onigiri-mask.png" width=321 height=354 onload="imgload()" />
-      <img id="omotenashiTamago" src="img/omotenashi-tamago.png" width=321 height=354 onload="imgload()" />
-      <img id="omotenashiTamagoMask" src="img/omotenashi-tamago-mask.png" width=321 height=354 onload="imgload()" />
-      <img id="omotenashiTempura" src="img/omotenashi-tempura.png" width=321 height=354 onload="imgload()" />
-      <img id="omotenashiTempuraMask" src="img/omotenashi-tempura-mask.png" width=321 height=354 onload="imgload()" />
-      <img id="omotenashiSides" src="img/omotenashi-sides.png" width=321 height=354 onload="imgload()" />
-      <img id="omotenashiSidesMask" src="img/omotenashi-sides-mask.png" width=321 height=354 onload="imgload()" />
+      <img id="omotenashi" src="img/omotenashi.png" width=321 height=354 onload="imgload()" decoding="async" />
+      <img id="omotenashiCover" src="img/omotenashi-cover.png" width=321 height=354 onload="imgload()" decoding="async" />
+      <img id="omotenashiOnigiri" src="img/omotenashi-onigiri.png" width=321 height=354 onload="imgload()" decoding="async" />
+      <img id="omotenashiOnigiriMask" src="img/omotenashi-onigiri-mask.png" width=321 height=354 onload="imgload()" decoding="async" />
+      <img id="omotenashiTamago" src="img/omotenashi-tamago.png" width=321 height=354 onload="imgload()" decoding="async" />
+      <img id="omotenashiTamagoMask" src="img/omotenashi-tamago-mask.png" width=321 height=354 onload="imgload()" decoding="async" />
+      <img id="omotenashiTempura" src="img/omotenashi-tempura.png" width=321 height=354 onload="imgload()" decoding="async" />
+      <img id="omotenashiTempuraMask" src="img/omotenashi-tempura-mask.png" width=321 height=354 onload="imgload()" decoding="async" />
+      <img id="omotenashiSides" src="img/omotenashi-sides.png" width=321 height=354 onload="imgload()" decoding="async" />
+      <img id="omotenashiSidesMask" src="img/omotenashi-sides-mask.png" width=321 height=354 onload="imgload()" decoding="async" />
     </div>
     <div id="canvasWrapper">
       <canvas id="canvas" width=960 height=640></canvas>
