fix cropping on mobile

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         overflow: hidden;
         height: 100vh;
         width: 100vw;
+        min-height: 800px;
+        min-width: 1280px;
         margin: 0;
       }
       body {
@@ -30,6 +32,8 @@
         position: relative;
         margin: auto;
         margin-top: 80px;
+        margin-left: 160px;
+        margin-right: 160px;
       }
 
       #canvas {
